--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ install:
 - pip install -r requirements.txt
 script:
 - sonar-scanner -Dsonar.login=$SONAR_TOKEN
+after_deploy:
+- git clean -df
 deploy:
   provider: heroku
   api_key:
