--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ behave==1.2.5
 behave-django==0.5.0
 dj-database-url==0.4.2
 Django==1.11.5
+djangorestframework==3.7.3
 factory-boy==2.9.2
 Faker==0.8.4
 gunicorn==19.7.1
