--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 behave==1.2.5
 behave-django==0.5.0
+certifi==2017.11.5
+chardet==3.0.4
+defusedxml==0.5.0
 dj-database-url==0.4.2
 Django==1.11.5
+django-allauth==0.34.0
+django-rest-auth==0.9.2
 djangorestframework==3.7.3
 factory-boy==2.9.2
 Faker==0.8.4
 gunicorn==19.7.1
+idna==2.6
+oauthlib==2.0.6
 parse==1.8.2
 parse-type==0.4.2
 psycopg2==2.7.3.1
 python-dateutil==2.6.1
+python3-openid==3.1.0
 pytz==2017.2
+requests==2.18.4
+requests-oauthlib==0.8.0
 selenium==3.6.0
 six==1.11.0
+urllib3==1.22
 whitenoise==3.3.1
