--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ defusedxml==0.5.0
 dj-database-url==0.4.2
 Django==1.11.5
 django-allauth==0.34.0
+django-braces==1.12.0
+django-oauth-toolkit==1.0.0
 django-rest-auth==0.9.2
+django-rest-framework-social-oauth2==1.0.8
 djangorestframework==3.7.3
 factory-boy==2.9.2
 Faker==0.8.4
@@ -16,12 +19,16 @@ oauthlib==2.0.6
 parse==1.8.2
 parse-type==0.4.2
 psycopg2==2.7.3.1
+PyJWT==1.5.3
 python-dateutil==2.6.1
+python-social-auth==0.3.6
 python3-openid==3.1.0
 pytz==2017.2
 requests==2.18.4
 requests-oauthlib==0.8.0
 selenium==3.6.0
 six==1.11.0
+social-auth-app-django==2.0.0
+social-auth-core==1.5.0
 urllib3==1.22
 whitenoise==3.3.1
