--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ branches:
 install:
 - pip install -r requirements.txt
 script:
+- export SONARQUBE_SKIPPED=false
 - sonar-scanner -Dsonar.login=$SONAR_TOKEN
 deploy:
   provider: heroku
