--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ addons:
     organization: asleao-github
     token:
       secure: "$SONAR_TOKEN"
+    github_token:
+      secure: "$GITHUB_TOKEN"
 branches:
-  only:
-  - master
-  - develop
+  - all
 install:
 - pip install -r requirements.txt
 script:
