--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ addons:
     github_token:
       secure: "$GITHUB_TOKEN"
 branches:
-  - all
+  - master
+  - develop
 install:
 - pip install -r requirements.txt
 script:
