--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ python:
 jdk:
 - oraclejdk8
 addons:
-  sonarqube:
+  sonarcloud:
     organization: asleao-github
     token:
       secure: "$SONAR_TOKEN"
     github_token:
       secure: "$GITHUB_TOKEN"
-branches:
-  - master
-  - develop
+    branches:
+      - master
+      - develop
 install:
 - pip install -r requirements.txt
 script:
