--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey = leds-zeppelin-api
 sonar.projectName = leds-zeppelin-api
 sonar.projectVersion = 1.0
-sonar.sources = leds-zeppelin
+sonar.sources = leds-zeppelin-api
 sonar.language=py
 sonar.sourceEncoding=UTF-8
