--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-oauth-toolkit==1.0.0
 django-rest-auth==0.9.2
 django-rest-framework-social-oauth2==1.0.8
 djangorestframework==3.7.3
+djangorestframework-jwt==1.11.0
 factory-boy==2.9.2
 Faker==0.8.4
 gunicorn==19.7.1
