--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+astroid==2.0.1
 behave==1.2.5
 behave-django==0.5.0
 certifi==2017.11.5
@@ -15,11 +16,15 @@ factory-boy==2.9.2
 Faker==0.8.4
 gunicorn==19.7.1
 idna==2.6
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 oauthlib==2.0.6
 parse==1.8.2
 parse-type==0.4.2
 psycopg2==2.7.3.1
 PyJWT==1.5.3
+pylint==2.0.1
 python-dateutil==2.6.1
 python-social-auth==0.3.6
 python3-openid==3.1.0
@@ -30,5 +35,7 @@ selenium==3.6.0
 six==1.11.0
 social-auth-app-django==2.0.0
 social-auth-core==1.5.0
+typed-ast==1.1.0
 urllib3==1.22
 whitenoise==3.3.1
+wrapt==1.10.11
