--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey = leds-zeppelin-api
 sonar.projectName = leds-zeppelin-api
 sonar.projectVersion = 1.0
-sonar.sources =.zeppelin
+sonar.sources =./zeppelin
 sonar.language=py
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=env
