--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.0.4
+autopep8==1.4
 behave==1.2.5
 behave-django==0.5.0
 certifi==2017.11.5
@@ -24,6 +25,7 @@ oauthlib==2.0.6
 parse==1.8.2
 parse-type==0.4.2
 psycopg2==2.7.3.1
+pycodestyle==2.4.0
 PyJWT==1.5.3
 pylint==2.1.1
 python-dateutil==2.6.1
