--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ certifi==2017.11.5
 chardet==3.0.4
 defusedxml==0.5.0
 dj-database-url==0.4.2
-Django==1.11.5
+Django==1.11.15
 django-allauth==0.34.0
 django-braces==1.12.0
 django-oauth-toolkit==1.0.0
@@ -37,3 +37,4 @@ typed-ast==1.1.0
 urllib3==1.22
 whitenoise==3.3.1
 wrapt==1.10.11
+pika==0.11.0
