--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ dj-database-url==0.4.2
 Django==1.11.15
 django-allauth==0.34.0
 django-braces==1.12.0
+django-cors-headers==2.4.0
 django-oauth-toolkit==1.0.0
 django-rest-auth==0.9.3
+django-rest-framework-social-oauth2==1.0.8
 djangorestframework==3.7.3
 djangorestframework-jwt==1.11.0
 factory-boy==2.9.2
@@ -23,18 +25,25 @@ mccabe==0.6.1
 oauthlib==2.0.6
 parse==1.8.2
 parse-type==0.4.2
+pika==0.11.0
 psycopg2==2.7.3.1
+pyasn1==0.4.4
 pycodestyle==2.4.0
+pycrypto==2.6.1
 PyJWT==1.5.3
 pylint==2.1.1
 python-dateutil==2.6.1
+python-keyczar==0.716
+python-social-auth==0.3.6
 python3-openid==3.1.0
 pytz==2017.2
 requests==2.18.4
+requests-oauthlib==0.8.0
 selenium==3.6.0
 six==1.11.0
+social-auth-app-django==2.0.0
+social-auth-core==1.5.0
 typed-ast==1.1.0
 urllib3==1.22
 whitenoise==3.3.1
 wrapt==1.10.11
-pika==0.12.0
