--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.4.3
 dj-database-url==0.5.0
 Django==2.1.4
 django-cors-headers==2.4.0
+django-filter==2.0.0
 djangorestframework==3.9.0
 gunicorn==19.9.0
 isort==4.3.4
