--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==2.1.4
 django-cors-headers==2.4.0
 django-filter==2.0.0
 djangorestframework==3.9.0
+djangorestframework-simplejwt==3.3
 gunicorn==19.9.0
 isort==4.3.4
 lazy-object-proxy==1.3.1
@@ -12,6 +13,7 @@ mccabe==0.6.1
 pika==0.12.0
 psycopg2-binary==2.7.6.1
 pycodestyle==2.4.0
+PyJWT==1.7.1
 pylint==2.2.2
 pytz==2018.7
 six==1.11.0
