--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,38 @@
 astroid==2.1.0
 autopep8==1.4.3
+certifi==2018.11.29
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 dj-database-url==0.5.0
 Django==2.1.4
 django-cors-headers==2.4.0
 django-filter==2.0.0
 djangorestframework==3.9.0
 djangorestframework-simplejwt==3.3
+drf-yasg==1.12.1
 gunicorn==19.9.0
+idna==2.8
+inflection==0.3.1
 isort==4.3.4
+itypes==1.1.0
+Jinja2==2.10
 lazy-object-proxy==1.3.1
+MarkupSafe==1.1.0
 mccabe==0.6.1
+openapi-codec==1.3.2
 pika==0.12.0
 psycopg2-binary==2.7.6.1
 pycodestyle==2.4.0
 PyJWT==1.7.1
 pylint==2.2.2
 pytz==2018.7
+requests==2.21.0
+ruamel.yaml==0.15.86
+simplejson==3.16.0
 six==1.11.0
 typed-ast==1.1.0
+uritemplate==3.0.0
+urllib3==1.24.1
 whitenoise==4.1.2
 wrapt==1.10.11
