--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 astroid==2.1.0
+atomicwrites==1.2.1
+attrs==18.2.0
 autopep8==1.4.3
 certifi==2018.11.29
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==4.5.2
 dj-database-url==0.5.0
 Django==2.1.4
 django-cors-headers==2.4.0
@@ -11,6 +14,7 @@ django-filter==2.0.0
 djangorestframework==3.9.0
 djangorestframework-simplejwt==3.3
 drf-yasg==1.12.1
+Faker==0.9.1
 gunicorn==19.9.0
 idna==2.8
 inflection==0.3.1
@@ -20,17 +24,26 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
+mixer==6.1.3
+more-itertools==5.0.0
 openapi-codec==1.3.2
 pika==0.12.0
+pluggy==0.8.1
 psycopg2-binary==2.7.6.1
+py==1.7.0
 pycodestyle==2.4.0
 PyJWT==1.7.1
 pylint==2.2.2
+pytest==4.1.1
+pytest-cov==2.6.1
+pytest-django==3.4.5
+python-dateutil==2.7.5
 pytz==2018.7
 requests==2.21.0
 ruamel.yaml==0.15.86
 simplejson==3.16.0
 six==1.11.0
+text-unidecode==1.2
 typed-ast==1.1.0
 uritemplate==3.0.0
 urllib3==1.24.1
