--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: trusty
 sudo: false
 language: python
 python:
-  - '3.5'
+  - '3.6.7'
 jdk:
   - oraclejdk8
 addons:
@@ -16,7 +16,7 @@ addons:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest
+  - py.test
   - sonar-scanner -Dsonar.login=$SONAR_TOKEN
 deploy:
   provider: heroku
