--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest
+  - py.test
   - sonar-scanner -Dsonar.login=$SONAR_TOKEN
 deploy:
   provider: heroku
