--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-filter==2.0.0
 djangorestframework==3.9.0
 djangorestframework-simplejwt==3.3
 drf-yasg==1.12.1
+factory-boy==2.11.1
 Faker==0.9.1
 gunicorn==19.9.0
 idna==2.8
