--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pylint==2.2.2
 pytest==4.1.1
 pytest-cov==2.6.1
 pytest-django==3.4.5
+pytest-runner==4.2
 python-dateutil==2.7.5
 pytz==2018.7
 requests==2.21.0
