--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE=core.settings
-addopts= -v --cov --cov-report=html
+DJANGO_SETTINGS_MODULE = core.settings
+addopts = -v
