--- a/requirements.in
+++ b/requirements.in
@@ -1,16 +1,17 @@
 autopep8==1.4.3
 dj-database-url==0.5.0
-Django==2.1.4
+Django==2.2.3
 django-cors-headers==2.4.0
-django-filter==2.0.0
-djangorestframework==3.9.0
+django-filter==2.1.0
+djangorestframework==3.9.3
 djangorestframework-simplejwt==4.3.0
-drf-yasg==1.12.1
+drf-yasg==1.15.1
 factory-boy==2.11.1
 Faker==0.9.1
 gunicorn==19.9.0
 mixer==6.1.3
 pika==0.12.0
+pip-tools==3.8.0
 pytest==4.1.1
 pytest-cov==2.6.1
 pytest-django==3.4.5
