--- a/requirements.txt
+++ b/requirements.txt
@@ -9,16 +9,17 @@ attrs==19.1.0             # via pytest
 autopep8==1.4.3
 certifi==2019.6.16        # via requests
 chardet==3.0.4            # via requests
+click==7.0                # via pip-tools
 coreapi==2.3.3            # via drf-yasg
 coreschema==0.0.4         # via coreapi, drf-yasg
 coverage==4.5.3           # via pytest-cov
 dj-database-url==0.5.0
 django-cors-headers==2.4.0
-django-filter==2.0.0
-django==2.1.4
+django-filter==2.1.0
+django==2.2.3
 djangorestframework-simplejwt==4.3.0
-djangorestframework==3.9.0
-drf-yasg==1.12.1
+djangorestframework==3.9.3
+drf-yasg==1.15.1
 factory-boy==2.11.1
 faker==0.9.1
 gunicorn==19.9.0
@@ -31,6 +32,7 @@ markupsafe==1.1.1         # via jinja2
 mixer==6.1.3
 more-itertools==7.1.0     # via pytest
 pika==0.12.0
+pip-tools==3.8.0
 pluggy==0.12.0            # via pytest
 psycopg2-binary==2.7.6.1
 py==1.8.0                 # via pytest
@@ -44,7 +46,8 @@ pytz==2019.1              # via django
 requests==2.22.0          # via coreapi
 ruamel.yaml==0.15.99      # via drf-yasg
 simplejson==3.16.0
-six==1.12.0               # via drf-yasg, faker, pytest, python-dateutil
+six==1.12.0               # via drf-yasg, faker, pip-tools, pytest, python-dateutil
+sqlparse==0.3.0           # via django
 text-unidecode==1.2       # via faker
 uritemplate==3.0.0        # via coreapi, drf-yasg
 urllib3==1.25.3           # via requests
