--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
 install:
   - pip install -r requirements.txt
 script:
+  - python manage.py migrate
   - pytest
   - sonar-scanner -Dsonar.login=$SONAR_TOKEN
 
