--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ addons:
 install:
   - pip install -r requirements.txt
 script:
-  - python manage.py migrate --run-syncdb
-  - pytest
+#  - pytest
   - sonar-scanner -Dsonar.login=$SONAR_TOKEN
 
 deploy:
