--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
 install:
   - pip install -r requirements.txt
 script:
-#  - pytest
+  - pytest
   - sonar-scanner -Dsonar.login=$SONAR_TOKEN
 
 deploy:
