Adding migrations command to pipeline.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ install:
   - pip install -r requirements.txt
 
 script:
+  - python manage.py makemigrations
+  - python manage.py migrate
   - pytest
   - sonar-scanner -Dsonar.login=$SONAR_TOKEN
 
